@@ -8,13 +8,13 @@ echo start docker build and deployment:
 docker -H satsrv04:2375 pull webofneeds/postgres
 docker -H satsrv04:2375 stop postgres_dev  || echo 'No docker container found to stop with name: postgres_dev'
 docker -H satsrv04:2375 rm postgres_dev || echo 'No docker container found to remove with name: postgres_dev'
-docker -H satsrv04:2375 run --name=postgres_dev -d -p 5432:5432 webofneeds/postgres
+docker -H satsrv04:2375 run --name=postgres_dev -d -p 5432:5432 -m 256m webofneeds/postgres
 
 # postgres db 2
 docker -H satsrv05:2375 pull webofneeds/postgres
 docker -H satsrv05:2375 stop postgres_dev || echo 'No docker container found to stop with name: postgres_dev'
 docker -H satsrv05:2375 rm postgres_dev || echo 'No docker container found to remove with name: postgres_dev'
-docker -H satsrv05:2375 run --name=postgres_dev -d -p 5432:5432 webofneeds/postgres
+docker -H satsrv05:2375 run --name=postgres_dev -d -p 5432:5432 -m 256m webofneeds/postgres
 
 
 # wonnode/owner server certificate generator
@@ -50,7 +50,9 @@ docker -H satsrv04:2375 run --name=wonnode_dev -d -e "uri.host=satsrv04.research
 -e "db.sql.user=won" -e "db.sql.password=won" \
 -v /home/install/won-server-certs:/usr/local/tomcat/conf/ssl/ \
 -v /home/install/won-client-certs/wonnode_dev:/usr/local/tomcat/won/client-certs/ \
--p 8888:8443 -p 61616:61616 webofneeds/wonnode:dev
+-p 8888:8443 -p 61616:61616 \
+-e "JMEM_OPTS=-Xmx170m -XX:MaxMetaspaceSize=160m -XX:+HeapDumpOnOutOfMemoryError" \
+-m 350m webofneeds/wonnode:dev
 
 
 # wonnode 2
@@ -64,7 +66,9 @@ docker -H satsrv05:2375 run --name=wonnode_dev -d -e "uri.host=satsrv05.research
 -e "db.sql.user=won" -e "db.sql.password=won" \
 -v /home/install/won-server-certs:/usr/local/tomcat/conf/ssl/ \
 -v /home/install/won-client-certs/wonnode_dev:/usr/local/tomcat/won/client-certs/ \
--p 8888:8443 -p 61616:61616 webofneeds/wonnode:dev
+-p 8888:8443 -p 61616:61616 \
+-e "JMEM_OPTS=-Xmx170m -XX:MaxMetaspaceSize=160m -XX:+HeapDumpOnOutOfMemoryError" \
+-m 350m webofneeds/wonnode:dev
 
 sleep 20
 
@@ -79,7 +83,9 @@ docker -H satsrv04:2375 run --name=owner_dev -d -e "node.default.host=satsrv04.r
 -e "db.sql.user=won" -e "db.sql.password=won" \
 -v /home/install/won-server-certs:/usr/local/tomcat/conf/ssl/ \
 -v /home/install/won-client-certs/owner_dev:/usr/local/tomcat/won/client-certs/ \
--p 8081:8443 webofneeds/owner:dev
+-p 8081:8443 \
+-e "JMEM_OPTS=-Xmx1000m -XX:MaxMetaspaceSize=200m -XX:+HeapDumpOnOutOfMemoryError" \
+webofneeds/owner:dev
 
 # owner 2
 docker -H satsrv05:2375 build -t webofneeds/owner:dev $WORKSPACE/webofneeds/won-docker/owner/
@@ -92,13 +98,16 @@ docker -H satsrv05:2375 run --name=owner_dev -d -e "node.default.host=satsrv05.r
 -e "db.sql.user=won" -e "db.sql.password=won" \
 -v /home/install/won-server-certs:/usr/local/tomcat/conf/ssl/ \
 -v /home/install/won-client-certs/owner_dev:/usr/local/tomcat/won/client-certs/ \
--p 8081:8443 webofneeds/owner:dev
+-p 8081:8443 \
+-e "JMEM_OPTS=-Xmx1000m -XX:MaxMetaspaceSize=200m -XX:+HeapDumpOnOutOfMemoryError" \
+webofneeds/owner:dev
 
 # bigdata
 docker -H satsrv06:2375 pull webofneeds/bigdata
 docker -H satsrv06:2375 stop bigdata_dev || echo 'No docker container found to stop with name: bigdata_dev'
 docker -H satsrv06:2375 rm bigdata_dev || echo 'No docker container found to remove with name: bigdata_dev'
-docker -H satsrv06:2375 run --name=bigdata_dev -d -p 9999:9999 webofneeds/bigdata
+docker -H satsrv06:2375 run --name=bigdata_dev -d -p 9999:9999 \
+-m 256m webofneeds/bigdata
 
 # matcher service
 docker -H satsrv06:2375 build -t webofneeds/matcher_service:dev $WORKSPACE/webofneeds/won-docker/matcher-service/
@@ -109,13 +118,17 @@ docker -H satsrv06:2375 run --name=matcher_service_dev -d -e "node.host=satsrv06
 -e "uri.sparql.endpoint=http://satsrv06.researchstudio.at:9999/bigdata/namespace/kb/sparql" \
 -e "wonNodeController.wonNode.crawl=https://satsrv04.researchstudio.at:8888/won/resource,https://satsrv05.researchstudio.at:8888/won/resource" \
 -v /home/install/won-client-certs/matcher_service_int:/usr/src/matcher-service/client-certs/ \
--e "cluster.local.port=2551" -e "cluster.seed.port=2551" -p 2551:2551 webofneeds/matcher_service:dev
+-e "cluster.local.port=2551" -e "cluster.seed.port=2551" -p 2551:2551 \
+-e "JMEM_OPTS=-Xmx170m -XX:MaxMetaspaceSize=160m -XX:+HeapDumpOnOutOfMemoryError" \
+-m 350m webofneeds/matcher_service:dev
 
 # siren solr server
 docker -H satsrv06:2375 pull webofneeds/sirensolr
 docker -H satsrv06:2375 stop sirensolr_dev || echo 'No docker container found to stop with name: sirensolr_dev'
 docker -H satsrv06:2375 rm sirensolr_dev || echo 'No docker container found to remove with name: sirensolr_dev'
-docker -H satsrv06:2375 run --name=sirensolr_dev -d -p 7070:8080 -p 8983:8983 webofneeds/sirensolr
+docker -H satsrv06:2375 run --name=sirensolr_dev -d -p 7070:8080 -p 8983:8983 \
+--env CATALINA_OPTS="-Xmx200m  -XX:MaxPermSize=150m -XX:+HeapDumpOnOutOfMemoryError" \
+-m 350m webofneeds/sirensolr
 
 sleep 10
 
@@ -127,7 +140,9 @@ docker -H satsrv06:2375 run --name=matcher_siren_dev -d -e "node.host=satsrv06.r
 -e "cluster.seed.host=satsrv06.researchstudio.at" -e "cluster.seed.port=2551" -e "cluster.local.port=2552" \
 -e "matcher.siren.uri.solr.server=http://satsrv06.researchstudio.at:8983/solr/won/" \
 -e "matcher.siren.uri.solr.server.public=http://satsrv06.researchstudio.at:8983/solr/#/won/" \
--p 2552:2552 webofneeds/matcher_siren:dev
+-p 2552:2552 \
+-e "JMEM_OPTS=-Xmx200m -XX:MaxMetaspaceSize=150m -XX:+HeapDumpOnOutOfMemoryError" \
+-m 350m webofneeds/matcher_siren:dev
 
 
 
@@ -139,9 +154,9 @@ docker -H localhost:2375 build -t webofneeds/owner:dev $WORKSPACE/webofneeds/won
 docker -H localhost:2375 build -t webofneeds/matcher_service:dev $WORKSPACE/webofneeds/won-docker/matcher-service/
 docker -H localhost:2375 build -t webofneeds/matcher_siren:dev $WORKSPACE/webofneeds/won-docker/matcher-siren/
 # push:
-docker -H localhost:2375 login -u heikofriedrich
-docker -H localhost:2375 push webofneeds/gencert:dev
-docker -H localhost:2375 push webofneeds/wonnode:dev
-docker -H localhost:2375 push webofneeds/owner:dev
-docker -H localhost:2375 push webofneeds/matcher_service:dev
-docker -H localhost:2375 push webofneeds/matcher_siren:dev
+#docker -H localhost:2375 login -u heikofriedrich
+#docker -H localhost:2375 push webofneeds/gencert:dev
+#docker -H localhost:2375 push webofneeds/wonnode:dev
+#docker -H localhost:2375 push webofneeds/owner:dev
+#docker -H localhost:2375 push webofneeds/matcher_service:dev
+#docker -H localhost:2375 push webofneeds/matcher_siren:dev
